# learn_wgpu2

./: Cargo.toml  plan.txt
src/: app.rs  cache.rs  camera.rs  camera_uniform.rs  cube_texture.rs  get_type.rs  input_context.rs  lib.rs  main.rs  my_pipeline.rs  my_render_pass.rs  render_context.rs  render_data.rs  render_passes.rs  render_passes2.rs  render_pipeline.rs  renderable.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/pipelines/: default.wgsl  default_pipeline.rs  mod.rs  shader.wgsl  skybox.wgsl  skybox_pipeline.rs  ui.wgsl  ui_pipeline.rs
src/render_passes/: mod.rs  opauqe3d_render_pass.rs  ui_render_pass.rs
src/renderables/: cube.rs  mod.rs  polygon.rs  skybox.rs  ui.rs
