[package]
name = "learn_wgpu2"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.1"
bytemuck = "1.22.0"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.26"
tokio = {version="1.43.0", features= ["full"]}
winit = "0.30.9"
lazy_static = "1.5.0"
cgmath = "0.18.0"
rusttype = "0.9.3"
moka = {version="0.12.10", features=["sync"]}
